Updates to documentation; reduced default auto scroll speed for better smart phone experience

--- a/examples/index.html
+++ b/examples/index.html
@@ -172,6 +172,7 @@
 
 <div class="bodyLiner">
     <h2>.dragArrange()</h2>
+    <p>A simple jQuery plugin to allow sorting of a group of elements by drag and drop.</p>
 
     <div class="code">
         <h4>.dragArrange(selector [,options])</h4>
@@ -194,7 +195,7 @@
                     <dd>jQuery selector of element within a draggable element to be used as the drag handle. If not set, the entire draggable
                         element acts as the handle.
                     </dd>
-                    <dt>scrollSpeed: (integer | default 20)</dt>
+                    <dt>scrollSpeed: (integer | default 15)</dt>
                     <dd>Maximum number of pixels to move at a time in auto scroll. It should be noted that during auto scroll, the closer the
                         pointer is to the edge of the browser window, the more pixels will pass, up to the maximum of <em>scrollSpeed</em> for each
                         event processed.
